# finbot

./: .gitignore  .gitmodules  README.md  [消融]RAG端到端.ipynb  [消融]股票组合推荐.ipynb  [评估]摘要生成.ipynb  [评估]文档主题分割.ipynb  [评估]金融情绪提取.ipynb  pyproject.toml  setup.sh  数据处理.ipynb
demo/: 2019-10-08_相关新闻片段.json  2019Q4股票预测.xlsx  README.md  数据预处理.ipynb
dev/: 1_文档主题分割.ipynb  2_摘要生成.py  3_金融情绪提取.ipynb  4_RAG.ipynb  LLM微调.ipynb  RAG.ipynb  merge_lora_adapter.sh  sft_llama3_2_3B_for_FINNA.sh  sft_qwen2_5_3B_for_FINNA.sh  test.py  train_abstract.sh  向量检索.ipynb  启动LLM服务.md  外部数据转换.ipynb  情感提取-BERT.ipynb  情感提取-LLM.ipynb  情感提取.ipynb  摘要生成.py  文档主题分割.ipynb  新闻摘要.ipynb  新闻摘要_qwen2_5_3B_lora_sft.yaml  股价预测.ipynb
eval/:  检索重排.ipynb  .deepeval_telemtry.txt  eval_dev_results.md  情感提取.ipynb  情绪因子效果.ipynb  文档主题分割.ipynb  新闻摘要.ipynb  股价预测.ipynb  金融情绪提取.ipynb
resources/: dataset_info.json  open_models
scripts/: download_data.sh  download_model.sh  setup_environment.sh
test/: 文档主题分割.ipynb
tools/: 外部数据转换.ipynb  数据处理.ipynb  数据格式转换.ipynb
train/: BERT_for_情感提取.ipynb  BERT情感提取.ipynb  LightGBM_for_股价预测.ipynb  backtrader_mystrategy.ipynb  sft_llama3_2_3B_for_FINNA.sh  sft_qwen2_5_14B_for_FINNA.sh  sft_qwen2_5_3B_for_FINNA.sh  test.ipynb  情感提取.ipynb  新闻摘要.ipynb  股价预测.ipynb
train_scripts/: sft_llama3_2_3B_for_FINNA.sh  train-情感提取.ipynb  train-股价预测.ipynb
use/: BERT情感提取.ipynb  LLM情感提取.ipynb  bge-向量检索（调用）.ipynb
utils/: alpha.py  backtest.py  eval.py  extract_sentiment.py  llmcost_est.py  models.py  prompts.py  qlib_exp_engine.py  rag.py  retrieve.py  slim_data.py  split_text.py  spliters.py  (+1 more)
(+895 files in other folders)
