[project]
name = "finbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "addict>=2.4.0",
    "backtrader>=1.9.78.123",
    "deepspeed>=0.16.7",
    "flagembedding>=1.3.4",
    "flashinfer-python>=0.2.5",
    "flask>=3.1.1",
    "flask-cors>=5.0.1",
    "hf-transfer>=0.1.9",
    "ipykernel>=6.29.5",
    "lightgbm>=4.6.0",
    "llamafactory[metrics,torch]",
    "matplotlib>=3.10.3",
    "minirag-hku",
    "modelscope>=1.26.0",
    "notebook>=7.4.2",
    "openpyxl>=3.1.5",
    "polars-ta>=0.5.3",
    "segeval>=2.0.11",
    "simplejson>=3.20.1",
    "sortedcontainers>=2.4.0",
    "vllm==0.8.1",
]

[tool.uv.sources]
minirag-hku = { git = "https://github.com/HKUDS/MiniRAG.git", rev = "v0.0.1" }
llamafactory = { git = "https://github.com/hiyouga/LLaMA-Factory.git", rev = "v0.9.2" }

[dependency-groups]
dev = []
